# poc-medco

./: .gitignore  DEVELOPMENT.md  README.md  RUNNING.md  docker-compose.yml  setup-windows.bat  setup-windows.ps1  start-windows.bat  start.sh  verify-windows.bat
middleware/: .dockerignore  Dockerfile  config.example.yaml  pyproject.toml
middleware/driftwatch/: __init__.py  __main__.py
middleware/driftwatch/adapters/: __init__.py  discovery_report_writer.py
middleware/driftwatch/adapters/sinks/: composite.py  console.py  csv_sink.py  live.py
middleware/driftwatch/adapters/transport/: delegating.py  pymodbus_base.py  resilient.py  rtu.py  safety.py  tcp.py
middleware/driftwatch/application/: __init__.py  dead_tracker.py  discovery.py  discovery_report.py  options.py  ports.py  scan_range.py  scanner.py  slave_scanner.py
middleware/driftwatch/domain/: __init__.py  change_event.py  connection_state.py  decoder.py  exceptions.py  modicon.py  object_type.py
middleware/driftwatch/infrastructure/: __init__.py  api.py  config_loader.py  service.py
middleware/static/: app.js  index.html  style.css
middleware/tests/: fake_client.py  test_api.py  test_decoder.py  test_discovery.py  test_modicon.py  test_options.py  test_scanner.py  test_sinks.py  test_transport.py
plc-simulator/: Dockerfile  README.md  chaos.py  plc_sim.py  register_map.example.yaml  requirements.txt
